Automatically create top-xyz playlists based on playcounts database

--- a/res/xml/preference_misc.xml
+++ b/res/xml/preference_misc.xml
@@ -42,6 +42,12 @@ THE SOFTWARE.
 		android:title="@string/double_tap_title"
 		android:summary="@string/double_tap_summary"
 		android:defaultValue="false" />
+	<ch.blinkenlights.android.vanilla.ListPreferenceSummary
+		android:key="autoplaylist_playcounts"
+		android:title="@string/autoplaylist_playcounts_title"
+		android:entries="@array/autoplaylist_playcounts_entries"
+		android:entryValues="@array/autoplaylist_playcounts_values"
+		android:defaultValue="25" />
 	<CheckBoxPreference
 		android:key="scrobble"
 		android:title="@string/scrobble_title"
