--- a/res/values/translatable.xml
+++ b/res/values/translatable.xml
@@ -292,4 +292,12 @@ THE SOFTWARE.
 	<string name="filebrowser_start">Filebrowser home</string>
 	<string name="customize_filebrowser_start">Filebrowser starts at this directory</string>
 	<string name="select">Select</string>
+
+	<string name="autoplaylist_playcounts_title">Automatic playlist</string>
+	<string name="autoplaylist_playcounts_val_0">Do not create an automatic playlist</string>
+	<string name="autoplaylist_playcounts_val_25">Automatically create a \'Top 25\' Playlist</string>
+	<string name="autoplaylist_playcounts_val_50">Automatically create a \'Top 50\' Playlist</string>
+	<string name="autoplaylist_playcounts_val_100">Automatically create a \'Top 100\' Playlist</string>
+	<string name="autoplaylist_playcounts_name">Top %d</string>
+
 </resources>
