--- a/res/values/untranslatable.xml
+++ b/res/values/untranslatable.xml
@@ -112,5 +112,17 @@ THE SOFTWARE.
 		<item>@string/fixed_info</item>
 	</string-array>
 
+	<string-array name="autoplaylist_playcounts_entries">
+		<item>@string/autoplaylist_playcounts_val_0</item>
+		<item>@string/autoplaylist_playcounts_val_25</item>
+		<item>@string/autoplaylist_playcounts_val_50</item>
+		<item>@string/autoplaylist_playcounts_val_100</item>
+	</string-array>
+	<string-array name="autoplaylist_playcounts_values">
+		<item>0</item>
+		<item>25</item>
+		<item>50</item>
+		<item>100</item>
+	</string-array>
 
 </resources>
